# Discord-ChatGPT

./: Cargo.toml  Dockerfile  fly.toml  rust-toolchain
src/: main.rs
src/commands/: gpt4.rs  mod.rs
